--- a/client/angular.json
+++ b/client/angular.json
@@ -61,7 +61,8 @@
         "serve": {
           "builder": "@angular/build:dev-server",
           "options": {
-            "proxyConfig": "proxy.conf.json"
+            "proxyConfig": "proxy.conf.json",
+            "open": true
           },
           "configurations": {
             "production": {
