--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,12 +40,12 @@
   "compounds": [
     {
       "name": "Full Stack: Server + Client (Chrome)",
-      "configurations": ["Server: Spring Boot", "Client: Angular (Chrome)"],
+      "configurations": ["Client: Angular (Chrome)"],
       "stopAll": true
     },
     {
       "name": "Full Stack: Server + Client (Edge)",
-      "configurations": ["Server: Spring Boot", "Client: Angular (Edge)"],
+      "configurations": ["Client: Angular (Edge)"],
       "stopAll": true
     }
   ]
