feat: enhance join-room functionality with auto-join for logged-in users
style: adjust login and register page height for better layout

feat: add optional durationSeconds to VideoRecommendation model

feat: implement room deletion with confirmation modal in My Rooms

style: improve My Rooms layout with header and action buttons

feat: add websocket subscription for playlist history updates

feat: update user menu with branding link to home

fix: ensure video controls are disabled when no video is loaded

feat: enhance watch-room layout and functionality with new tab for playlist

fix: improve YouTube player overlay behavior and recommendation display

test: add unit tests for JoinRoomComponent functionality

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,12 +40,12 @@
   "compounds": [
     {
       "name": "Full Stack: Server + Client (Chrome)",
-      "configurations": ["Client: Angular (Chrome)"],
+      "configurations": ["Server: Spring Boot", "Client: Angular (Chrome)"],
       "stopAll": true
     },
     {
       "name": "Full Stack: Server + Client (Edge)",
-      "configurations": ["Client: Angular (Edge)"],
+      "configurations": ["Server: Spring Boot", "Client: Angular (Edge)"],
       "stopAll": true
     }
   ]
