--- a/client/angular.json
+++ b/client/angular.json
@@ -61,8 +61,7 @@
         "serve": {
           "builder": "@angular/build:dev-server",
           "options": {
-            "proxyConfig": "proxy.conf.json",
-            "open": true
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
