docs: streamline README, add version tagging to version-bump workflow

--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -103,3 +103,8 @@ jobs:
           git add -A
           git commit -m "chore(version): bump to ${{ steps.new.outputs.version }} [skip ci]"
           git push origin main
+
+      - name: Create version tag
+        run: |
+          git tag "v${{ steps.new.outputs.version }}"
+          git push origin "v${{ steps.new.outputs.version }}"
