--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
   api:
     build: ./server
-    image: watchparty-api:0.7.0
+    image: watchparty-api:latest
     ports:
       - "8080:8080"
     environment:
@@ -41,7 +41,7 @@ services:
 
   client:
     build: ./client
-    image: watchparty-client:0.7.0
+    image: watchparty-client:latest
     ports:
       - "4200:80"
     depends_on:
