--- a/server/pom.xml
+++ b/server/pom.xml
@@ -96,6 +96,13 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <!-- HTML Sanitization -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.18.3</version>
+        </dependency>
+
         <!-- Null-safety annotations -->
         <dependency>
             <groupId>org.jspecify</groupId>
