--- a/server/src/main/resources/application-standalone.yml
+++ b/server/src/main/resources/application-standalone.yml
@@ -16,10 +16,7 @@ spring:
 
   h2:
     console:
-      enabled: true
-      path: /h2-console
-      settings:
-        web-allow-others: true
+      enabled: false
 
 cors:
-  allowed-origins: "*"
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:*}
