--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -108,3 +108,10 @@ jobs:
         run: |
           git tag "v${{ steps.new.outputs.version }}"
           git push origin "v${{ steps.new.outputs.version }}"
+
+  publish-docker:
+    name: Publish Docker Image
+    needs: bump-version
+    uses: ./.github/workflows/docker-publish.yml
+    permissions:
+      packages: write
