--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,14 +3,6 @@ name: Docker Publish
 on:
   workflow_dispatch:
   workflow_call:
-  push:
-    branches: [main]
-    paths:
-      - 'server/**'
-      - 'client/**'
-      - 'Dockerfile.standalone'
-      - 'docker-compose.standalone.yml'
-      - '.github/workflows/docker-publish.yml'
 
 permissions:
   packages: write
@@ -19,11 +11,12 @@ jobs:
   publish:
     name: Build & Push Standalone Image
     runs-on: ubuntu-latest
-    if: "!startsWith(github.event.head_commit.message, 'chore(version):') || github.event_name == 'workflow_call' || github.event_name == 'workflow_dispatch'"
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: main
 
       - name: Read version
         id: version
